# platanus-hack-26-mx-team-21

./: .gitignore  README.md  SEEDED  platanus-hack-project.jsonc  project-description.md
services/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
services/api/src/citycrawl_api/: __init__.py  auth.py  config.py  errors.py  logging.py  main.py
services/api/src/citycrawl_api/modules/: __init__.py
services/api/src/citycrawl_api/routers/: __init__.py  datasets.py  health.py  llm.py  observations.py  planning.py  video.py
services/api/tests/: conftest.py
services/api/tests/api/: test_datasets_api.py  test_health.py  test_inference_channel.py  test_llm_api.py  test_llm_limits.py  test_observations_gate.py  test_observations_idempotency.py  test_observations_image_validation.py  test_planning_api.py  test_video_api.py
services/api/tests/datasets/: test_ckan_csv.py  test_cli.py  test_config.py  test_core_utils.py  test_net_guard.py  test_news_geocode.py  test_registry.py  test_roi_engine.py  test_roi_runner.py  test_schema.py  test_signal_store.py  test_storage.py
services/api/tests/integration/: capture_ts_planning.mts  test_planning_optimization_route.py  test_planning_parity.py
services/api/tests/integration/fixtures/: planning_parity.json
services/api/tests/unit/: test_auth_service_key.py  test_config_startup.py  test_dataset_service.py  test_llm_anthropic.py  test_llm_prompt_hardening.py  test_planning_cli.py  test_planning_clustering.py  test_planning_cost.py  test_planning_engine.py  test_planning_geometry.py  test_planning_superclustering.py  test_planning_traffic.py
services/external-data/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/external-data/cron/: wrangler.toml
services/external-data/src/external_data/: cli.py  config.py  schema.py
services/external-data/src/external_data/adapters/: base.py  (+2 more)
services/external-data/tests/: test_ckan_csv.py  test_cli.py  test_config.py  test_core_utils.py  test_news_geocode.py  test_registry.py  test_roi_engine.py  test_roi_runner.py  test_schema.py  test_signal_store.py  test_storage.py
services/external-data/tests/fixtures/: ssc_sample.csv
services/vision-inference/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/vision-inference/docs/: PLAN.md  architecture_justification.md  prompts.md  vision_model_and_ground_truth.md  vllm_perf_analysis.md
services/vision-inference/ops/: start_both.sh
services/vision-inference/ops/triton_scaffold/: ARCHITECTURE.md  README.md  docker-compose.yaml
services/vision-inference/pipeline/: bench_vllm.py  fetch_kartaview.py  regrid_render.py  run_anomaly_render.py  run_available_models.py  run_offline_cascade.py  run_pothole.py  run_streetview.py  run_video_roadgated.py  run_vlm_frames.py
services/vision-inference/src/vision_inference/: app.py  db.py  listener.py  query_jobs.py  r2.py  schemas.py  supa.py  vlm.py  worker.py
services/vision-inference/tests/: test_r2_url.py  test_schemas.py
(+287 files in other folders)
