[project]
name = "citycrawl-api"
version = "0.1.0"
description = "CityCrawl modular API — planning, LLM draft parsing, dataset refresh, video extension point"
requires-python = ">=3.11"
dependencies = [
  # API
  "fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2.6",
  "pydantic-settings>=2.2", "httpx>=0.27", "anthropic>=0.40",
  # Dataset pipeline (lazily imported at request time)
  "pyyaml>=6", "pandas>=2.2", "pyarrow>=15", "shapely>=2.0",
  "scikit-learn>=1.4", "numpy>=1.26", "pyproj>=3.6", "feedparser>=6",
  "fsspec>=2024.6", "s3fs>=2024.6", "psycopg[binary]>=3.1",
  "python-dateutil>=2.9", "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "anyio>=4"]

[project.scripts]
# Local Typer adapter over the same DatasetRefreshService the HTTP endpoint uses.
citycrawl-datasets = "citycrawl_api.modules.datasets.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"citycrawl_api.modules.datasets" = ["registry/sources.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
