[project]
name = "external-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27", "pydantic>=2.6", "pydantic-settings>=2.2", "pyyaml>=6",
  "typer>=0.12", "pandas>=2.2", "pyarrow>=15", "shapely>=2.0",
  "scikit-learn>=1.4", "numpy>=1.26", "pyproj>=3.6", "feedparser>=6",
  "anthropic>=0.40", "fsspec>=2024.6", "s3fs>=2024.6", "psycopg[binary]>=3.1",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
external-data = "external_data.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
external_data = ["registry/sources.yaml"]
